integration-guide/v1/web-integration/subscriptions.mdx
---
title: "Subscriptions"
description: "Set up and manage UPI and card subscription mandates using EximPe Merchant APIs."
---

<Note>
  UPI and card subscriptions let you collect recurring payments from customers using subscription mandates.
  This guide walks through how to create and manage subscriptions using EximPe Merchant APIs.
</Note>

<CardGroup cols={5}>
  <Card title="Create Subscription" icon="repeat" href="#step-1-create-subscription">
    Create a subscription order with subscription mandate
  </Card>
  <Card title="Check Mandate Status" icon="clock" href="#step-2-check-mandate-status">
    Verify that the UPI mandate is active before proceeding
  </Card>
  <Card title="Trigger Recurring Payment" icon="credit-card" href="#step-3-trigger-recurring-payment">
    Send pre-debit notification and trigger recurring payment
  </Card>
  <Card title="Modify or Cancel Mandate" icon="edit" href="#step-4-modify-or-cancel-mandate">
    Update mandate amount/end date or cancel the subscription
  </Card>
  <Card title="View Payments" icon="list" href="#step-5-view-subscription-payments">
    Fetch all payments associated with a subscription
  </Card>
</CardGroup>

## Prerequisites

Before you begin, ensure you have:

- **Credentials**: Your Client ID and Client Secret
- **Domain Whitelist**: Whitelisted your website domain for integration
- **Webhook URL**: A secure endpoint to receive payment status updates
- **UPI Subscription enablement**: UPI recurring subscription enabled and approved by EximPe.
- **Server environment**: Ability to make HTTPS `POST` and `GET` requests from your backend.
- **JSON & HTTP Client**: Familiarity with JSON request bodies and HTTP client libraries.

## Integration Steps

The integration consists of five steps:

1. **Create Subscription**
2. **Check Mandate Status**
3. **Trigger Recurring Payment**
4. **Modify or Cancel Mandate**
5. **View Subscription Payments**

## Step 1: Create Subscription

<Note>
  **Test/Sandbox Environment Limits**: In test/sandbox environment, there is a lower limit of **₹100** for the `amount` field and **₹200** for the `billing_amount` field in the standing instruction. These limits apply to subscriptions created via Intent Flow.
</Note>

Use the **Create UPI Subscription** or **Create Card Subscription** API to create a subscription order and standing instruction. You can use **Intent Flow** (QR code/intent) for UPI or **Card Flow** (card details) for card-based subscriptions.

### Intent Flow

<Note>
  **Production Only**: Intent Flow can be tested only in production environment. This feature is not available in test/sandbox environments.
</Note>

Use the **Intent Flow** to create subscriptions without requiring the customer's VPA upfront. The Intent flow allows customers to approve the mandate by scanning a QR code or using a UPI payment intent.

#### Sample Request (Intent Flow)

```json
curl -X POST https://api-pacb.eximpe.com/pg/subscriptions/intent/ \
  -H "Content-Type: application/json" \
  -H "X-Client-ID: <your-client-id>" \
  -H "X-Client-Secret: <your-client-secret>" \
  -H "X-Merchant-ID: <your-merchant-id>" \
  -H "X-API-Version: 1.0.0" \
  -d '{
    "amount": "1000.00",
    "collection_mode": "s2s",
    "currency": "INR",
    "reference_id": "SUBR8QRLW",
    "buyer": {
        "name": "John Doe",
        "email": "john.doe@example.com",
        "phone": "+919876543210",
        "address": {
            "line_1": "123 Main Street",
            "line_2": "Apt 4B",
            "city": "Mumbai",
            "state": "Maharashtra",
            "postal_code": "400001"
        },
        "ip_address": "192.168.1.100",
        "user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36"
    },
    "product": {
        "name": "Monthly Subscription Plan",
        "description": "Monthly subscription for premium services",
        "hs_code": "98051000",
        "hs_code_description": "Subscription services",
        "type_of_goods": "service"
    },
    "invoice": {
        "number": "INVMVLSVW",
        "date": "2025-12-15"
    },
    "standing_instruction": {
        "billing_amount": "1000.00",
        "billing_currency": "INR",
        "billing_cycle": "MONTHLY",
        "billing_interval": 1,
        "payment_start_date": "2026-01-15",
        "payment_end_date": "2027-01-15",
        "billing_date": 1,
        "billing_limit": "AFTER",
        "billing_rule": "MAX",
        "remarks": "Monthly subscription for premium services"
    },
    "mop_type": "UPI",
    "upi_flow_type": "intent",
    "upi_app_name": "others"
}'
```

#### Response (Intent Flow)

```json
{
  "success": true,
  "message": "UPI Subscription created successfully",
  "data": {
    "order_id": "550e8400-e29b-41d4-a716-446655440000",
    "subscription_id": "660e8400-e29b-41d4-a716-446655440001",
    "subscription_type": "UPI_RECURRING",
    "intent_uri": "pa=merchant@payu&pn=Merchant%20Name&am=1000.00&cu=INR&tn=Order%20Description&tr=ORD-2024-001",
    "qr_code": {
      "url": "upi://pay?pa=merchant@payu&pn=Merchant%20Name&am=1000.00&cu=INR&tn=Order%20Description&tr=ORD-2024-001",
      "base64": "iVBORw0KGgoAAAANSUhEUgAA..."
    },
    "subscription": {
      "billing_cycle": "MONTHLY",
      "billing_interval": 1,
      "payment_start_date": "2025-01-01",
      "payment_end_date": "2025-12-31",
      "status": "PENDING"
    }
  }
}
```

<Note>
  The customer approves the mandate by scanning a QR code or using a UPI payment intent. The response returns a QR code in base64 format for display.
</Note>

#### Display QR Code

The response includes a base64-encoded QR code that can be displayed directly:

```html
<img src="data:image/png;base64,{data.qr_code.base64}" alt="UPI Payment QR Code" />
```

Alternatively, you can use the `intent_uri` to generate a QR code client-side or use the provided `qr_code.url` for UPI app deep linking.

For full request and response schema, see the [**Create UPI Subscription (Intent Flow)**](https://docs.eximpe.com/api-reference/v1/subscriptions/create-intent) endpoint in API Reference.

### Card Flow

Use the **Card Flow** to create subscriptions using the customer's card details. The request is sent from your server to EximPe with the required transaction parameters. Card-based subscriptions use `mop_type` **CREDIT_CARD** and require `card_details` (card number, cardholder name, expiry, CVV, network, and optional nickname).

#### Sample Request (Card Flow)

```json
curl -X POST https://api-pacb.eximpe.com/pg/subscriptions/card/ \
  -H "Content-Type: application/json" \
  -H "X-Client-ID: <your-client-id>" \
  -H "X-Client-Secret: <your-client-secret>" \
  -H "X-Merchant-ID: <your-merchant-id>" \
  -H "X-API-Version: 1.0.0" \
  -d '{
    "amount": "1000.00",
    "collection_mode": "s2s",
    "currency": "INR",
    "reference_id": "SUBM6FLMZ",
    "buyer": {
        "name": "John Doe",
        "email": "john.doe@example.com",
        "phone": "+919876543210",
        "address": {
            "line_1": "123 Main Street",
            "line_2": "Apt 4B",
            "city": "Mumbai",
            "state": "Maharashtra",
            "postal_code": "400001"
        },
        "ip_address": "192.168.1.100",
        "user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36"
    },
    "product": {
        "name": "Monthly Subscription Plan",
        "description": "Monthly subscription for premium services",
        "hs_code": "98051000",
        "hs_code_description": "Subscription services",
        "type_of_goods": "service"
    },
    "invoice": {
        "number": "INVLA0BYZ",
        "date": "2026-03-14"
    },
    "standing_instruction": {
        "billing_amount": "1000.00",
        "billing_currency": "INR",
        "billing_cycle": "MONTHLY",
        "billing_interval": 1,
        "payment_start_date": "2026-04-14",
        "payment_end_date": "2027-04-14",
        "billing_date": 1,
        "remarks": "Monthly subscription for premium services"
    },
    "mop_type": "CREDIT_CARD",
    "card_details": {
        "number": "4111111111111111",
        "cardholder_name": "John Doe",
        "expiry_month": 12,
        "expiry_year": 2029,
        "cvv": "123",
        "network": "VISA",
        "nickname": "My Credit Card"
    }
}'
```

#### Response (Card Flow)

```json
{
  "success": true,
  "message": "Card Subscription created successfully",
  "data": {
    "order_id": "OD7468644660",
    "subscription_type": "CARD_RECURRING",
    "message": "Card Subscription consent transaction created",
    "acstemplate": "PGh0bWw+PGJvZHk+PGZvcm0g...",
    "subscription_id": "SUB4109986375",
    "subscription": {
      "billing_cycle": "MONTHLY",
      "billing_interval": 1,
      "payment_start_date": "2026-04-14",
      "payment_end_date": "2027-04-14",
      "status": "PENDING"
    }
  }
}
```

<Note>
  **3D Secure Authentication**: Card-based subscriptions may require 3D Secure authentication. If the response includes an `acstemplate`, render it on the client side (e.g. in an iframe or new window) to complete the authentication process before the subscription mandate becomes active.
</Note>

For full request and response schema, see the [**Create Card Subscription**](https://docs.eximpe.com/api-reference/v1/subscriptions/create-card) endpoint in API Reference.

## Step 2: Check Mandate Status

After the customer approves the UPI mandate, use the [**Get Subscription Mandate Status**](https://docs.eximpe.com/api-reference/v1/subscriptions/mandate-status) API to verify that it is active.

### Sample Request

```json
curl -X GET "https://api-pacb.eximpe.com/pg/subscriptions/SUB_xxx/mandate_status/" \
  -H "X-Client-ID: <your-client-id>" \
  -H "X-Client-Secret: <your-client-secret>" \
  -H "X-Merchant-ID: <your-merchant-id>" \
  -H "X-API-Version: 1.0.0"
```

### Response

```json
{
  "success": true,
  "message": "Subscription mandate status fetched successfully",
  "data": {
    "subscription_id": "SUB_xxx",
    "mandate_is_active": true
  }
}
```

Only proceed to debit the customer when `mandate_is_active` is `true`.

## Step 3: Trigger Recurring Payment

### 3.1 Send Pre-Debit Notification

Use the [**Pre-Debit Notification**](https://docs.eximpe.com/api-reference/v1/subscriptions/pre-debit-notification) API to inform the customer about an upcoming debit, in line with UPI subscription compliance. This should be sent at least **48 hours** before triggering the actual recurring payment. If the billing cycle is daily, the notification should be sent at least **24 hours** before triggering the payment.

#### Sample Request

```json
curl -X POST "https://api-pacb.eximpe.com/pg/subscriptions/SUB_xxx/pre_debit_notification/" \
  -H "Content-Type: application/json" \
  -H "X-Client-ID: <your-client-id>" \
  -H "X-Client-Secret: <your-client-secret>" \
  -H "X-Merchant-ID: <your-merchant-id>" \
  -H "X-API-Version: 1.0.0" \
  -d '{
    "debit_date": "2025-06-10",
    "amount": 1000.00,
    "invoice_display_number": "inv"
  }'
```

#### Response

```json
{
  "success": true,
  "message": "Pre-debit notification triggered successfully",
  "data": {
    "subscription_id": "SUB_xxx",
    "debit_date": "2025-06-10",
    "amount": "1000.00",
    "notification_sent": true
  }
}
```

### 3.2 Trigger Recurring Payment

<Note>
  **Test/Sandbox Environment**: In test/sandbox environment, the recurring payment can be called immediately after the pre-debit notification is sent. The 48-hour (or 24-hour for daily billing) waiting period requirement applies only to production environment.
</Note>

On the scheduled billing date, trigger the recurring payment using the [**Trigger Recurring Payment**](https://docs.eximpe.com/api-reference/v1/subscriptions/recurring-payment) API.

#### Sample Request

```json
curl -X POST "https://api-pacb.eximpe.com/pg/subscriptions/SUB_xxx/recurring_payment/" \
  -H "Content-Type: application/json" \
  -H "X-Client-ID: <your-client-id>" \
  -H "X-Client-Secret: <your-client-secret>" \
  -H "X-Merchant-ID: <your-merchant-id>" \
  -H "X-API-Version: 1.0.0" \
  -d '{
    "amount": 1000.00,
    "invoice_display_number": "INV-2025-001"
  }'
```

#### Response

```json
{
  "success": true,
  "message": "Recurring payment triggered successfully",
  "data": {
    "order_id": "ORD_xxx",
    "message": "UPI Collection request sent to somevpa@upi"
  }
}
```

Use the standard [**Get Payment**](https://docs.eximpe.com/api-reference/v1/payment/get) or [**Get Order**](https://docs.eximpe.com/api-reference/v1/order/get) APIs or webhooks to track installment success and failures.

## Step 4: Modify or Cancel Mandate

<Note>
  **Production Only**: Cancel mandate and modify mandate operations are only supported in production environment. These features are not available in test/sandbox environments.
</Note>

### 4.1 Modify Mandate

To change the billing amount or end date of an active subscription, use the [**Modify Subscription Mandate**](https://docs.eximpe.com/api-reference/v1/subscriptions/modify-mandate) API.

#### Sample Request

```json
curl -X POST "https://api-pacb.eximpe.com/pg/subscriptions/SUB_xxx/modify_mandate/" \
  -H "Content-Type: application/json" \
  -H "X-Client-ID: <your-client-id>" \
  -H "X-Client-Secret: <your-client-secret>" \
  -H "X-Merchant-ID: <your-merchant-id>" \
  -H "X-API-Version: 1.0.0" \
  -d '{
    "amount": 1500.00,
    "end_date": "2025-12-31"
  }'
```

#### Response

```json
{
  "success": true,
  "message": "Subscription mandate modification request sent successfully",
  "data": {
    "subscription_id": "SUB_xxx",
    "mandate_modified": true,
    "updated_amount": "1500.00",
    "updated_end_date": "2025-12-31"
  }
}
```

<Note>
  At least one of `amount` or `end_date` must be provided to modify the mandate.
</Note>

### 4.2 Cancel Mandate

To fully stop future debits and revoke the subscription mandate, use the [**Cancel Subscription Mandate**](https://docs.eximpe.com/api-reference/v1/subscriptions/cancel-mandate) API.

#### Sample Request

```json
curl -X POST "https://api-pacb.eximpe.com/pg/subscriptions/SUB_xxx/cancel_mandate/" \
  -H "X-Client-ID: <your-client-id>" \
  -H "X-Client-Secret: <your-client-secret>" \
  -H "X-Merchant-ID: <your-merchant-id>" \
  -H "X-API-Version: 1.0.0"
```

#### Response

```json
{
  "success": true,
  "message": "Subscription mandate cancel request sent successfully",
  "data": {
    "subscription_id": "SUB_xxx",
    "mandate_cancelled": true,
    "subscription_status": "CANCELLED"
  }
}
```

The subscription will be marked as `CANCELLED` on success.

## Step 5: View Subscription Payments

Use the [**Get Subscription Payments**](https://docs.eximpe.com/api-reference/v1/subscriptions/payments) API to fetch all payments associated with a subscription from the internal system. This is available for **all payment gateways** and **all environments** (including production).

### Sample Request

```json
curl -X GET "https://api-pacb.eximpe.com/pg/subscriptions/SUB_xxx/payments/" \
  -H "X-Client-ID: <your-client-id>" \
  -H "X-Client-Secret: <your-client-secret>" \
  -H "X-Merchant-ID: <your-merchant-id>" \
  -H "X-API-Version: 1.0.0"
```

### Response

```json
{
  "success": true,
  "message": "Subscription payments fetched successfully",
  "data": [
    {
      "payment_id": "dpr_abc123",
      "order_id": "ord_xyz789",
      "reference_id": "SUBPAY-sub123-cf456",
      "amount": 1000.00,
      "currency": "INR",
      "status": "CAPTURED",
      "payment_type": "RECURRING",
      "payment_gateway": "CASHFREE",
      "mop_type": "UPI",
      "transaction_id": "cf_order_abc",
      "cf_payment_id": "cf_pay_123",
      "bank_ref_num": "BANK123456",
      "status_message": null,
      "created_at": "2025-03-20T10:30:00Z",
      "payment_completed_at": "2025-03-20T10:30:05Z"
    }
  ]
}
```

The response returns an array of all payment records for the subscription, including details such as the payment status, amount, mode of payment, and timestamps. Use this to build payment history views, reconcile billing records, or track installment statuses.

For full response field descriptions, see the [**Get Subscription Payments**](https://docs.eximpe.com/api-reference/v1/subscriptions/payments) endpoint in API Reference.

---

## Webhooks

EximPe sends webhook notifications when subscription status changes occur. You can configure webhooks to receive real-time updates about subscription lifecycle events.

### Subscription Status Webhook

The **Subscription Status** webhook is triggered when a subscription status changes or subscription information is updated. This allows you to track subscription lifecycle events and update your billing records accordingly.

For detailed webhook payload specifications, event types, and implementation details, refer to the [**Subscription Status Webhook**](https://docs.eximpe.com/api-reference/v1/webhooks/subscription-status) in API Reference.

<Note>
  For general webhook setup, security, and verification, see the [**Webhooks Integration Guide**](/integration-guide/web-integration/webhooks).
</Note>